Build 21 (13.11.2012)
- New object drawing engine, that allows to draw units & building by layers

Build 20 (12.11.2012)
- More correct way to check of building position
- Added energy indicator
- Added "Low power" sound notification, when power is too low
- Added "Taelon Power Generator" building (without Freighter). This is first animated building.
- Bugfix: Building selection when map view moved from top left corner
- Added addition Construction Rig to map

Build 19 (07.11.2012)
- Improved popup for units on building panel, now it shows required buildings too
- Added "Water Launch Pad" building (without Freighter)

Build 18 (06.11.2012)
- Added building and unit name when mouseover the object
- Added popup for units on building panel

Build 17 (05.11.2012)
- Some building based code optimizations
- Added new building: Camera Tower

Build 16 (18.10.2012)
- Finally added ability to build Headquarter, but still no option to produce new units.
- Project source code moved to GitHub

Build 15 (13.09.2012)
- Added ability to select building and choose place to build. But actually still no way to build it.

Build 14 (11.09.2012)
- Interface stop button now working
- Implemented "Can't move there" mouse cursor
- Implemented "Sell building" & "Power building" cursor and interface buttons
- View building options on right panel when selecting single Construction Rig
- Added some preparations for first building

Build 13 (04.09.2012)
- First implementation of pathfinding algorithm
- Units can avoid impact when moving toward each other
- Bridges, Crystal & water resources added to test level
- Implemented multi-select feature
- When press keyboard "S" button selected unit stop movement
- Improved unit selection drawing
- Draw unit health on mouseover

Build 12 (01.09.2012)
- Added Firefox support
- Added browser support check
- All cursors merged in to one sprite
- Added unit move sounds

Build 11 (31.08.2012)
- Added unit select & move cursors