@@ -17,6 +17,7 @@
 		<script type="text/javascript" src="js/unit.js"></script>
 		<script type="text/javascript" src="js/construct_manager.js"></script>
 		<script type="text/javascript" src="js/pathfinding.js"></script>
+		<script type="text/javascript" src="js/map_cell.js"></script>
 		<script type="text/javascript" src="js/levels/level1.js"></script>
 		<script type="text/javascript" src="js/font.js"></script>
 		<script type="text/javascript" src="js/object_draw.js"></script>
