@@ -26,6 +26,7 @@ CameraTowerBuilding.enabled = false;
 CameraTowerBuilding.count = 0;
 CameraTowerBuilding.cell_size = {x: 1, y: 2};
 CameraTowerBuilding.cell_matrix = [1,1];
+CameraTowerBuilding.move_matrix = [1,1];
 CameraTowerBuilding.cell_padding = {x: 0, y: 1};
 CameraTowerBuilding.image_size = {x: 24, y: 48};
 CameraTowerBuilding.image_padding = {x: 0, y: 0};
