@@ -26,6 +26,7 @@ HeadquarterBuilding.enabled = true;
 HeadquarterBuilding.count = 0;
 HeadquarterBuilding.cell_size = {x: 5, y: 4};
 HeadquarterBuilding.cell_matrix = [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1];
+HeadquarterBuilding.move_matrix = [0,0,1,1,1,1,1,0,0,1,0,0,1,1,1,1,0,1,1,1];
 HeadquarterBuilding.cell_padding = {x: 2, y: 2};
 HeadquarterBuilding.image_size = {x: 103, y: 138};
 HeadquarterBuilding.image_padding = {x: -9, y: 42};
