@@ -114,7 +114,8 @@ TaelonPowerBuilding.energy = 0;
 TaelonPowerBuilding.enabled = true;
 TaelonPowerBuilding.count = 0;
 TaelonPowerBuilding.cell_size = {x: 4, y: 4};
-TaelonPowerBuilding.cell_matrix = [0,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,];
+TaelonPowerBuilding.cell_matrix = [0,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1];
+TaelonPowerBuilding.move_matrix = [0,0,0,0,0,1,0,0,0,1,1,0,0,1,0,0];
 TaelonPowerBuilding.cell_padding = {x: 2, y: 1};
 TaelonPowerBuilding.image_size = {x: 90, y: 123};
 TaelonPowerBuilding.image_padding = {x: -4, y: 33};
